--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -44,6 +44,9 @@
             <a href="/vehicles" class="nav-item {% if request.endpoint == 'vehicles_page' %}active{% endif %}">
                 <span class="nav-text">Vehicles</span>
             </a>
+            <a href="/cost-report" class="nav-item {% if request.endpoint == 'cost_report_page' %}active{% endif %}">
+                <span class="nav-text">Cost Report</span>
+            </a>
         </nav>
 
         <div class="sidebar-footer">
